--- a/Client_App/Views/Forms/Forms1/Form_12.axaml
+++ b/Client_App/Views/Forms/Forms1/Form_12.axaml
@@ -6,6 +6,7 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:vm="clr-namespace:Client_App.ViewModels.Forms.Forms1"
     xmlns:converter="clr-namespace:Client_App.VisualRealization.Converters"
+	xmlns:dataGrid="clr-namespace:Avalonia.Controls;assembly=Avalonia.Controls.DataGrid"
     Title="Form_12"
     d:DesignHeight="450"
     d:DesignWidth="900"
@@ -15,6 +16,7 @@
 
     <Window.Resources>
         <converter:FractionConverter x:Key="FractionConverter"/>
+		<SolidColorBrush x:Key="PrimaryColor" Color="#5685c0"/> 
     </Window.Resources>
 
 	<Window.Styles>
@@ -27,6 +29,16 @@
 			<Setter Property="TextAlignment" Value="Center"/>
 		</Style>
         <Style Selector="TextBlock.Title2">
+            <Setter Property="Margin" Value="1"/>
+			<Setter Property="Padding" Value="5"/>
+            <Setter Property="HorizontalAlignment" Value="Stretch"/>
+			<Setter Property="VerticalAlignment" Value="Stretch"/>
+            <Setter Property="Background" Value="White"/>
+			<Setter Property="TextWrapping" Value="Wrap"/>
+			<Setter Property="TextAlignment" Value="Left"/>
+		    <Setter Property="TextTrimming" Value="WordEllipsis"/>
+        </Style>
+		<Style Selector="TextBlock.Title3">
             <Setter Property="Margin" Value="1"/>
             <Setter Property="HorizontalAlignment" Value="Stretch"/>
 			<Setter Property="VerticalAlignment" Value="Stretch"/>
@@ -43,7 +55,7 @@
         <vm:Form_12VM/>
     </Design.DataContext>
 
-	<Grid RowDefinitions ="Auto,Auto,*,Auto,Auto,Auto">
+	<Grid RowDefinitions ="Auto,*,100,100,100">
 		<StackPanel
 			Grid.Row ="0"
 			Orientation ="Horizontal">
@@ -103,95 +115,19 @@
 
 			<Button Height="42" Margin="5" > Перевести все РВ в РАО</Button>
 		</StackPanel>
-		
-		<StackPanel Background="#5685c0" Grid.Row="1">
-            <ScrollViewer HorizontalScrollBarVisibility="Auto">
-                <Grid Margin="5" Name="MainGrid">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition/>
-                        <ColumnDefinition/>
-                        <ColumnDefinition/>
-                        <ColumnDefinition/>
-                        <ColumnDefinition/>
-                        <ColumnDefinition/>
-                        <ColumnDefinition/>
-                        <ColumnDefinition/>
-                        <ColumnDefinition/>
-                        <ColumnDefinition/>
-                        <ColumnDefinition/>
-                        <ColumnDefinition/>
-                        <ColumnDefinition/>
-                        <ColumnDefinition/>
-                        <ColumnDefinition/>
-                        <ColumnDefinition/>
-                        <ColumnDefinition/>
-                        <ColumnDefinition/>
-                        <ColumnDefinition/>
-                        <ColumnDefinition/>
-                    </Grid.ColumnDefinitions>
-                    <Grid.RowDefinitions>
-                        <RowDefinition/>
-                        <RowDefinition/>
-                        <RowDefinition/>
-                    </Grid.RowDefinitions>
-
-                    <!-- Строки таблицы -->
-                    <TextBlock Classes="Title2" Grid.Column="0" Grid.Row="0"/>
-                    <TextBlock Classes="Title2" Grid.Column="0" Grid.Row="1"> № п/п </TextBlock>
-                    <TextBlock Classes="Title2" Grid.Column="0" Grid.Row="2"> 1 </TextBlock>
-
-                    <TextBlock Classes="Title1" Grid.Column="1" Grid.Row="0" Grid.ColumnSpan="2"> Сведения об операции </TextBlock>
-                    <TextBlock Classes="Title2" Grid.Column="1" Grid.Row="1"> код </TextBlock>
-                    <TextBlock Classes="Title2" Grid.Column="1" Grid.Row="2"> 2 </TextBlock>
-                    <TextBlock Classes="Title2" Grid.Column="2" Grid.Row="1"> дата </TextBlock>
-                    <TextBlock Classes="Title2" Grid.Column="2" Grid.Row="2"> 3 </TextBlock>
-     
-                    <TextBlock Classes="Title1" Grid.Column="3" Grid.Row="0" Grid.ColumnSpan="7"> Сведения из паспорта на изделие из обедненного урана </TextBlock>
-                    <TextBlock Classes="Title2" Grid.Column="3" Grid.Row="1"> номер паспорта </TextBlock>
-                    <TextBlock Classes="Title2" Grid.Column="3" Grid.Row="2"> 4 </TextBlock>
-                    <TextBlock Classes="Title2" Grid.Column="4" Grid.Row="1"> наименование </TextBlock>
-                    <TextBlock Classes="Title2" Grid.Column="4" Grid.Row="2"> 5 </TextBlock>
-                    <TextBlock Classes="Title2" Grid.Column="5" Grid.Row="1"> номер </TextBlock>
-                    <TextBlock Classes="Title2" Grid.Column="5" Grid.Row="2"> 6 </TextBlock>
-                    <TextBlock Classes="Title2" Grid.Column="6" Grid.Row="1" Text=" масса обедненного урана, кг "/>
-                    <TextBlock Classes="Title2" Grid.Column="6" Grid.Row="2"> 7 </TextBlock>
-                    <TextBlock Classes="Title2" Grid.Column="7" Grid.Row="1"> код ОКПО изготовителя </TextBlock>
-                    <TextBlock Classes="Title2" Grid.Column="7" Grid.Row="2"> 8 </TextBlock>
-                    <TextBlock Classes="Title2" Grid.Column="8" Grid.Row="1"> дата выпуска </TextBlock>
-                    <TextBlock Classes="Title2" Grid.Column="8" Grid.Row="2"> 9 </TextBlock>
-                    <TextBlock Classes="Title2" Grid.Column="9" Grid.Row="1"> НСС, мес </TextBlock>
-                    <TextBlock Classes="Title2" Grid.Column="9" Grid.Row="2"> 10 </TextBlock>
-
-                    <TextBlock Classes="Title1" Grid.Column="10" Grid.Row="0" Grid.ColumnSpan="2"> Право собственности на ИОУ </TextBlock>
-                    <TextBlock Classes="Title2" Grid.Column="10" Grid.Row="1"> код формы собственности </TextBlock>
-                    <TextBlock Classes="Title2" Grid.Column="10" Grid.Row="2"> 11 </TextBlock>
-                    <TextBlock Classes="Title2" Grid.Column="11" Grid.Row="1"> код ОКПО правообладателя </TextBlock>
-                    <TextBlock Classes="Title2" Grid.Column="11" Grid.Row="2"> 12 </TextBlock>
-
-                    <TextBlock Classes="Title1" Grid.Column="12" Grid.Row="0" Grid.ColumnSpan="3"> Документ </TextBlock>
-                    <TextBlock Classes="Title2" Grid.Column="12" Grid.Row="1"> вид </TextBlock>
-                    <TextBlock Classes="Title2" Grid.Column="12" Grid.Row="2"> 13 </TextBlock>
-                    <TextBlock Classes="Title2" Grid.Column="13" Grid.Row="1"> номер </TextBlock>
-                    <TextBlock Classes="Title2" Grid.Column="13" Grid.Row="2"> 14 </TextBlock>
-                    <TextBlock Classes="Title2" Grid.Column="14" Grid.Row="1"> дата </TextBlock>
-                    <TextBlock Classes="Title2" Grid.Column="14" Grid.Row="2"> 15 </TextBlock>
-
-                    <TextBlock Classes="Title1" Grid.Column="15" Grid.Row="0" Grid.ColumnSpan="2"> Код ОКПО </TextBlock>
-                    <TextBlock Classes="Title2" Grid.Column="15" Grid.Row="1"> поставщика или получателя </TextBlock>
-                    <TextBlock Classes="Title2" Grid.Column="15" Grid.Row="2"> 16 </TextBlock>
-                    <TextBlock Classes="Title2" Grid.Column="16" Grid.Row="1"> перевозчика </TextBlock>
-                    <TextBlock Classes="Title2" Grid.Column="16" Grid.Row="2"> 17 </TextBlock>
-
-                    <TextBlock Classes="Title1" Grid.Column="17" Grid.Row="0" Grid.ColumnSpan="3"> Прибор (установка), УКТ или иная упаковка </TextBlock>
-                    <TextBlock Classes="Title2" Grid.Column="17" Grid.Row="1"> наименование </TextBlock>
-                    <TextBlock Classes="Title2" Grid.Column="17" Grid.Row="2"> 18 </TextBlock>
-                    <TextBlock Classes="Title2" Grid.Column="18" Grid.Row="1"> тип </TextBlock>
-                    <TextBlock Classes="Title2" Grid.Column="18" Grid.Row="2"> 19 </TextBlock>
-                    <TextBlock Classes="Title2" Grid.Column="19" Grid.Row="1"> номер </TextBlock>
-                    <TextBlock Classes="Title2" Grid.Column="19" Grid.Row="2"> 20 </TextBlock>
-                </Grid>
-            </ScrollViewer>
-        </StackPanel>
-		
+		<StackPanel Grid.Row="1">
+			<ScrollViewer HorizontalScrollBarVisibility="Auto">
+				<DataGrid 
+					ItemsSource="{Binding FormList}"
+					AutoGenerateColumns ="True"
+					CanUserResizeColumns="True" 
+					AlternatingRowBackground="LightBlue">
+				</DataGrid>
+			</ScrollViewer>
+		</StackPanel>
+		<StackPanel Grid.Row="2" Background="{StaticResource PrimaryColor}" Margin="5"></StackPanel>
+		<StackPanel Grid.Row="3" Background="{StaticResource PrimaryColor}" Margin="5"></StackPanel>
+		<StackPanel Grid.Row="4" Background="{StaticResource PrimaryColor}" Margin="5"></StackPanel>
+	
 	</Grid>
 </Window>
