--- a/Client_App/Views/Forms/Forms1/Form_12.axaml
+++ b/Client_App/Views/Forms/Forms1/Form_12.axaml
@@ -15,7 +15,6 @@
 	x:Name="mainWindow">
 
     <Window.Resources>
-        <converter:FractionConverter x:Key="FractionConverter"/>
 		<SolidColorBrush x:Key="PrimaryColor" Color="#5685c0"/> 
     </Window.Resources>
 
@@ -55,79 +54,150 @@
         <vm:Form_12VM/>
     </Design.DataContext>
 
-	<Grid RowDefinitions ="Auto,*,100,100,100">
-		<StackPanel
-			Grid.Row ="0"
-			Orientation ="Horizontal">
-			<Grid Margin="5" RowDefinitions ="*,*,*,*,*">
-				<StackPanel Orientation ="Horizontal" Grid.Row="0">
-					<TextBlock Margin="5" >Дата окончания предыдущего отчетного периода:</TextBlock>
-					<DatePicker Margin="5" ></DatePicker>
+	<ScrollViewer VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Disabled">
+		<Grid RowDefinitions ="Auto,*,Auto,Auto,Auto">
+			<WrapPanel
+				Grid.Row ="0"
+				Orientation ="Horizontal">
+				<Border Margin="5" BorderBrush ="Black" BorderThickness ="1" CornerRadius ="5">
+					<Grid Margin="5" RowDefinitions ="*,*,*,*,*">
+						<Grid ColumnDefinitions="*,*"  Grid.Row="0">
+							<TextBlock Grid.Column="0" Margin="5" >Дата окончания предыдущего отчетного периода:</TextBlock>
+							<TextBox Grid.Column="1" 
+                                IsReadOnly="True"
+                                Text="{Binding Path=CurrentReport.StartPeriod_DB, Mode=OneTime}"/>
+						</Grid>
+
+						<Grid ColumnDefinitions="*,*"  Grid.Row="1">
+							<TextBlock Grid.Column="0" Margin="5" >Дата окончания настоящего отчетного периода:</TextBlock>
+							<TextBox Grid.Column="1" 
+                                IsReadOnly="True"
+                                Text="{Binding Path=CurrentReport.EndPeriod_DB, Mode=OneTime}"/>
+						</Grid>
+
+						<StackPanel  Orientation="Horizontal" Grid.Row="2">
+							<TextBlock Margin="5">Номер корректировки:</TextBlock>
+							<TextBox Margin="5" Width="75"  IsReadOnly="True"
+                                Text="{Binding Path=CurrentReport.CorrectionNumber_DB, Mode=OneTime}"></TextBox>
+						</StackPanel>
+
+						<StackPanel Orientation="Horizontal" Grid.Row="3">
+							<Button Margin="5" >Проверить</Button>
+							<Button Margin="5" >Сохранить</Button>
+						</StackPanel>
+
+						<StackPanel Orientation="Horizontal"  Grid.Row="4">
+							<TextBlock Margin="5" >Автозаполнение:</TextBlock>
+							<CheckBox Margin="5" ></CheckBox>
+						</StackPanel>
+					</Grid>
+				</Border>
+
+				<Border Margin="5" BorderBrush ="Black" BorderThickness ="1" CornerRadius ="5">
+					<Grid Margin="5" RowDefinitions ="*,*,*,*,*" ColumnDefinitions="*,2*">
+						<TextBlock Grid.Row="0" Grid.Column="0" Margin="5" >ФИО исполнителя:</TextBlock>
+						<TextBox Grid.Row="0" Grid.Column="1" Margin="5"  IsReadOnly="True"
+                                Text="{Binding Path=CurrentReport.FIOexecutor_DB, Mode=OneTime}"></TextBox>
+						<TextBlock Grid.Row="1" Grid.Column="0" Margin="5" >Должность:</TextBlock>
+						<TextBox Grid.Row="1" Grid.Column="1" Margin="5" IsReadOnly="True"
+                                Text="{Binding Path=CurrentReport.GradeExecutor_DB, Mode=OneTime}" ></TextBox>
+						<TextBlock Grid.Row="2" Grid.Column="0" Margin="5" >Телефон:</TextBlock>
+						<TextBox Grid.Row="2" Grid.Column="1" Margin="5" IsReadOnly="True"
+                                Text="{Binding Path=CurrentReport.ExecPhone_DB, Mode=OneTime}"></TextBox>
+						<TextBlock Grid.Row="3" Grid.Column="0" Margin="5" >Электронная почта:</TextBlock>
+						<TextBox Grid.Row="3" Grid.Column="1" Margin="5" IsReadOnly="True"
+                                Text="{Binding Path=CurrentReport.ExecEmail_DB, Mode=OneTime}"></TextBox>
+						<Button Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2" Margin="5" >Скопировать данные предыдущей формы</Button>
+					</Grid>
+				</Border>
+
+				<Button Height="42" Margin="5" > Перевести все РВ в РАО</Button>
+			</WrapPanel>
+			<StackPanel Grid.Row="1">
+				<ScrollViewer HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Disabled" >
+					<StackPanel >				
+					<DataGrid 
+						Items="{Binding FormList}"
+						CanUserResizeColumns="True" 
+						RowBackground="White"
+						AlternatingRowBackground="LightBlue"
+						Margin="5">
+						
+					
+						<DataGrid.Columns>
+
+							<DataGridTextColumn Header="№ п/п"
+												Binding="{Binding NumberInOrder_DB}"/>
+							<DataGridTextColumn Header="код" 
+												Binding="{Binding OperationCode_DB}"/>
+							<DataGridTextColumn Header="дата" 
+												Binding="{Binding OperationDate_DB}"/>
+							<DataGridTextColumn Header="номер паспорта" 
+												Binding="{Binding PassportNumber_DB}"/>
+							<DataGridTextColumn Header="наименование" 
+												Binding="{Binding NameIOU_DB}"/>
+							<DataGridTextColumn Header="номер" 
+												Binding="{Binding FactoryNumber_DB}"/>
+							<DataGridTextColumn Header="масса обедненного урана, кг" 
+												Binding="{Binding Mass_DB}"/>
+							<DataGridTextColumn Header="код ОКПО изготовителя" 
+												Binding="{Binding CreatorOKPO_DB}"/>
+							<DataGridTextColumn Header="дата выпуска" 
+												Binding="{Binding CreationDate_DB}"/>
+							<DataGridTextColumn Header="НСС, мес" 
+												Binding="{Binding SignedServicePeriod_DB}"/>
+							<DataGridTextColumn Header="код формы собственности" 
+												Binding="{Binding PropertyCode_DB}"/>
+							<DataGridTextColumn Header="код ОКПО правообладателя" 
+												Binding="{Binding Owner_DB}"/>
+							<DataGridTextColumn Header="вид" 
+												Binding="{Binding DocumentVid.Value}"/>
+							<DataGridTextColumn Header="номер" 
+												Binding="{Binding DocumentNumber.Value}"/>
+							<DataGridTextColumn Header="дата" 
+												Binding="{Binding DocumentDate.Value}"/>
+							<DataGridTextColumn Header="поставщика или получателя" 
+												Binding="{Binding ProviderOrRecieverOKPO_DB}"/>
+							<DataGridTextColumn Header="перевозчика" 
+												Binding="{Binding TransporterOKPO_DB}"/>
+							<DataGridTextColumn Header="наименование" 
+												Binding="{Binding PackName_DB}"/>
+							<DataGridTextColumn Header="тип" 
+												Binding="{Binding PackType_DB}"/>
+							<DataGridTextColumn Header="номер" 
+												Binding="{Binding PackNumber_DB}"/>
+						</DataGrid.Columns>
+					</DataGrid>
+						</StackPanel>
+
+				</ScrollViewer>
+			</StackPanel>
+			<StackPanel Grid.Row="2" Background="{StaticResource PrimaryColor}" Margin="5">
+				<StackPanel Orientation ="Horizontal">
+					<TextBlock Margin="5">Кол-во страниц:</TextBlock>
+					<TextBlock Margin="5">0</TextBlock>
 				</StackPanel>
-
-				<StackPanel Orientation ="Horizontal" Grid.Row="1">
-					<TextBlock Margin="5" >Дата окончания настоящего отчетного периода:</TextBlock>
-					<DatePicker Margin="5" ></DatePicker>
+				<StackPanel Orientation ="Horizontal">
+					<TextBlock Margin="5">Кол-во строчек:</TextBlock>
+					<TextBlock Margin="5">0</TextBlock>
 				</StackPanel>
-
-				<StackPanel Orientation ="Horizontal" Grid.Row="2">
-					<TextBlock Margin="5" >Номер корректировки:</TextBlock>
-					<TextBox Margin="5" ></TextBox>
-				</StackPanel>
-
-				<StackPanel Orientation ="Horizontal" Grid.Row="3">
-					<Button Margin="5" >Проверить</Button>
-					<Button Margin="5" >Сохранить</Button>
-				</StackPanel>
-
-				<StackPanel Orientation ="Horizontal" Grid.Row="4">
-					<TextBlock Margin="5" >Автозаполнение:</TextBlock>
-					<CheckBox Margin="5" ></CheckBox>
-				</StackPanel>
-			</Grid>
-
-			<Grid Margin="5" RowDefinitions ="*,*,*,*,*">
-				<StackPanel Orientation ="Horizontal" Grid.Row="0">
-					<TextBlock Margin="5" >ФИО исполнителя:</TextBlock>
-					<TextBox Margin="5" ></TextBox>
-				</StackPanel>
-
-				<StackPanel Orientation ="Horizontal" Grid.Row="1">
-					<TextBlock Margin="5" >Должность:</TextBlock>
-					<TextBox Margin="5" ></TextBox>
-				</StackPanel>
-
-
-				<StackPanel Orientation ="Horizontal" Grid.Row="2">
-					<TextBlock Margin="5" >Телефон:</TextBlock>
-					<TextBox Margin="5" ></TextBox>
-				</StackPanel>
-
-				<StackPanel Orientation ="Horizontal" Grid.Row="3">
-					<TextBlock Margin="5" >Номер корректировки:</TextBlock>
-					<TextBox Margin="5" ></TextBox>
-				</StackPanel>
-
-				<StackPanel Orientation ="Horizontal" Grid.Row="4">
-					<Button Margin="5" >Скопировать данные предыдущей формы</Button>
-				</StackPanel>
-			</Grid>
-
-			<Button Height="42" Margin="5" > Перевести все РВ в РАО</Button>
-		</StackPanel>
-		<StackPanel Grid.Row="1">
-			<ScrollViewer HorizontalScrollBarVisibility="Auto">
-				<DataGrid 
-					ItemsSource="{Binding FormList}"
-					AutoGenerateColumns ="True"
-					CanUserResizeColumns="True" 
-					AlternatingRowBackground="LightBlue">
+			</StackPanel>
+			<StackPanel Grid.Row="3" Background="{StaticResource PrimaryColor}" Margin="5"  Orientation ="Horizontal">
+				<Button Margin="5">&lt;</Button>
+				<Button Margin="5">1</Button>
+				<Button Margin="5">&gt;</Button>
+			</StackPanel>
+			<StackPanel Grid.Row="4" Background="{StaticResource PrimaryColor}" Margin="5">
+				<TextBlock Margin="5">Примечания</TextBlock>
+				<DataGrid Margin="5" >
+					<DataGrid.Columns>
+						<DataGridTextColumn Header="№ строки"></DataGridTextColumn>
+						<DataGridTextColumn Header="№ графы"></DataGridTextColumn>
+						<DataGridTextColumn MaxWidth="350" Width ="*" Header="Пояснения"></DataGridTextColumn>
+					</DataGrid.Columns>
 				</DataGrid>
-			</ScrollViewer>
-		</StackPanel>
-		<StackPanel Grid.Row="2" Background="{StaticResource PrimaryColor}" Margin="5"></StackPanel>
-		<StackPanel Grid.Row="3" Background="{StaticResource PrimaryColor}" Margin="5"></StackPanel>
-		<StackPanel Grid.Row="4" Background="{StaticResource PrimaryColor}" Margin="5"></StackPanel>
-	
-	</Grid>
+			</StackPanel>
+		
+		</Grid>
+	</ScrollViewer>
 </Window>
